package ca.mcscert.se2aa4.demos.tennis;

public class Match {
    String name = "Soft";
    public Match(){

    }

}
